[tool.poetry]
name = "pylibcklb-collection"
version = "0.0.0-post.1+cf0a978"
description = ""
authors = ["Tobias Ecklebe <tobias.ecklebe@outlook.de>"]
readme = "README.md"
packages = [{include = "pylibcklb", from = "src"}]

[tool.poetry.dependencies]
python = "^3.10"
pymongo = "^4.2.0"

[tool.poetry.group.dev.dependencies]
pytest = "^7.1.3"
coverage = {extras = ["toml"], version = "^6.4.4"}

[tool.poetry-dynamic-versioning]
enable = true
vcs = "git"
style = "semver"

[build-system]
requires = ["poetry-core>=1.0.0", "poetry-dynamic-versioning"]
build-backend = "poetry_dynamic_versioning.backend"

[tool.coverage.run]
omit = [".*", "*/site-packages/*"]

[tool.coverage.report]
fail_under = 100