[tool.poetry]
name = "pylibcklb-collection"
version = "0.0.0-post.7+167be53"
description = ""
authors = ["Tobias Ecklebe <tobias.ecklebe@outlook.de>"]
readme = "README.md"
packages = [{ include = "pylibcklb", from = "src" }]
classifiers = [
    "Programming Language :: Python :: 3",
]
[project.urls]
"Homepage" = "https://github.com/Ecklebe/pylibcklb-collection"
"Bug Tracker" = "https://github.com/Ecklebe/pylibcklb-collection/issues"

[tool.poetry.dependencies]
python = "^3.10"
pymongo = "^4.2.0"
bson = "^0.5.10"

[tool.poetry.group.dev.dependencies]
pytest = "^7.1.3"
coverage = { extras = ["toml"], version = "^6.4.4" }

[tool.poetry-dynamic-versioning]
enable = true
vcs = "git"
style = "semver"

[build-system]
requires = ["poetry-core>=1.0.0", "poetry-dynamic-versioning"]
build-backend = "poetry_dynamic_versioning.backend"

[tool.pytest.ini_options]
addopts = [
    "--import-mode=prepend",
    "--capture=sys",
]
testpaths = [
    "tests/unit",
    "tests/integration",
]

[tool.coverage.run]
omit = [
    ".*",
    "*/site-packages/*",
    "*/tests/*",
]

[tool.coverage.report]
fail_under = 100

[tool.coverage.xml]
output = "coverage/coverage.xml"

[tool.coverage.html]
directory = "coverage/html"