[tool.poetry]
name = "pylibcklb-collection"
version = "0.0.0-post.7+167be53"
description = ""
authors = ["Tobias Ecklebe <tobias.ecklebe@outlook.de>"]
readme = "README.md"
license = "LGPL-3.0-only"
packages = [{ include = "pylibcklb", from = "src" }]
classifiers = [
    "Programming Language :: Python :: 3",
]
[project.urls]
"Homepage" = "https://github.com/Ecklebe/pylibcklb-collection"
"Bug Tracker" = "https://github.com/Ecklebe/pylibcklb-collection/issues"

[tool.poetry.scripts]
sendJson2Mongo = 'pylibcklb.scripts.sendJson2Mongo:main'
extractBuildEnvInfo = 'pylibcklb.scripts.extractBuildEnvInfo:main'


[tool.poetry.dependencies]
python = "^3.10"
pymongo = { version = "^4.2.0", optional = true }
GitPython = { version = "^3.1.29", optional = true }
psutil = { version = "^5.9.2", optional = true }
py-cpuinfo = { version = "^8.0.0", optional = true }


[tool.poetry.group.dev.dependencies]
pytest = "^7.1.3"
coverage = { extras = ["toml"], version = "^6.4.4" }
pytest-mock-resources = { extras = ["mongo"], version = "^2.5.1" }

[tool.poetry.extras]
sendJson2Mongo = ["pymongo"]
extractBuildEnvInfo = ["pymongo", "GitPython", "psutil", "py-cpuinfo"]

[tool.poetry-dynamic-versioning]
enable = true
vcs = "git"
style = "semver"

[build-system]
requires = ["poetry-core>=1.0.0", "poetry-dynamic-versioning"]
build-backend = "poetry_dynamic_versioning.backend"

[tool.pytest.ini_options]
addopts = [
    "--import-mode=importlib",
    "--capture=sys",
]
testpaths = [
    "tests/unit",
    "tests/integration",
]

[tool.coverage.run]
parallel = true
branch = true
data_file = "coverage/.coverage"
omit = [
    "*/site-packages/*",
    "*/tests/*",
]

[tool.coverage.report]
fail_under = 100

[tool.coverage.xml]
output = "coverage/coverage.xml"

[tool.coverage.html]
directory = "coverage/html"